Compilada version para github

--- a/development/angular.json
+++ b/development/angular.json
@@ -42,6 +42,9 @@
           },
           "configurations": {
             "production": {
+              "outputPath": "../docs",
+              "baseHref": "/handwritten-digit-recognizer-front/",
+              "outputHashing": "all",
               "budgets": [
                 {
                   "type": "initial",
@@ -54,7 +57,6 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
